--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@ h1,h2,h3,h4,h5 {
 					<img src="img/arnav.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
 							<h4>Arnav Tandon</h4>
-							<h3>Editor</h3>
+							<h3>Editor and Written part</h3>
 							<ul class="social-icon">
 								<li><a href="https://www.facebook.com/tandonarnav" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 								<li><a href="https://www.instagram.com/tandon_arnav/?hl=en" class="fa fa-instagram wow fadeIn" data-wow-delay="0.9s"></a></li>
@@ -190,7 +190,7 @@ h1,h2,h3,h4,h5 {
 					<img src="img/vipul1.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
 							<h4>Vipul Kesari</h4>
-							<h3>Web DEveloper</h3>
+							<h3>Web DEveloper and console coding</h3>
 							<ul class="social-icon">
 								<li><a href="https://www.facebook.com/profile.php?id=100011042414170" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 								<li><a href="https://www.linkedin.com/in/vipul-kesari-9b6632191/" class="fa fa-linkedin wow fadeIn" data-wow-delay="0.6s"></a></li>
@@ -207,7 +207,7 @@ h1,h2,h3,h4,h5 {
 					<img src="img/nipun5.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
 							<h4>Nipun Jain</h4>
-							<h3>Web Designer</h3>
+							<h3>Content writing and web developing</h3>
 							<ul class="social-icon">
 								<li><a href="https://www.facebook.com/nipun.jain.739326" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 								<li><a href="https://www.instagram.com/nipun_jain5/" class="fa fa-instagram wow fadeIn" data-wow-delay="0.6s"></a></li>
@@ -223,7 +223,7 @@ h1,h2,h3,h4,h5 {
 					<img src="img/sarandeep.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
 							<h4>Sarandeep Singh</h4>
-							<h3>Web Developer</h3>
+							<h3>Queries writing</h3>
 							<ul class="social-icon">
 								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
@@ -238,7 +238,7 @@ h1,h2,h3,h4,h5 {
 					<img src="img/nitesh.jpg" class="img-responsive" alt="team img">
 						<div class="team-des">
 							<h4>Nitesh Jaiswal</h4>
-							<h3>Web Developer</h3>
+							<h3>queries writing</h3>
 							<ul class="social-icon">
 								<li><a href="#" class="fa fa-facebook wow fadeIn" data-wow-delay="0.3s"></a></li>
 								<li><a href="#" class="fa fa-twitter wow fadeIn" data-wow-delay="0.6s"></a></li>
