--- a/about.html
+++ b/about.html
@@ -140,8 +140,8 @@ h1,h2,h3,h4,h5 {
 <div class="dropdwn">
 <nav>
 <ul>
-<a class="navbar-brand" href="index2.html">IIITDefense</a>
-<li><a href="index2.html">Home</a></li>
+<a class="navbar-brand" href="index.html">IIITDefense</a>
+<li><a href="index.html">Home</a></li>
 <li><a href="#">Weapons  </a>
 
 </li>
