--- a/defence.html
+++ b/defence.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index2.html">IIITDefense</a>
+      <a class="navbar-brand" href="index.html">IIITDefense</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -39,25 +39,25 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index2.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About</a>
           </li>
           <li class="nav-item"><a class="nav-link" href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
-			<ul>
-			<li><a href="#">Handgun</a></li>
-			<li><a href="#">Assault-Rifles</a></li>
-			<li><a href="#">Vehicles</a></li>
-			</ul>
-		  </li>
-		  <li class="nav-item">
+      <ul>
+      <li><a href="#">Handgun</a></li>
+      <li><a href="#">Assault-Rifles</a></li>
+      <li><a href="#">Vehicles</a></li>
+      </ul>
+      </li>
+      <li class="nav-item">
             <a class="nav-link" href="post.html">Documentation</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-		  <li class="nav-item">
+      <li class="nav-item">
             <a class="nav-link" href="login.html">Login/SignUp</a>
           </li>
         </ul>
@@ -84,7 +84,7 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <p>All Defence Exams:</p>
-		<p>
+    <p>
 
  ››   Air Force Common Admission Test (AFCAT)
  </p><p>
