--- a/weapons.html
+++ b/weapons.html
@@ -8,7 +8,7 @@
   <meta name="author" content="">
 
   <title>IIITDefense</title>
-	
+  
 <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 <link rel="stylesheet" type="text/css" href="style2.css">
   <!-- Bootstrap core CSS -->
@@ -36,28 +36,28 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index2.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
           </li>
-		  <li class="nav-item"><a class="nav-link" href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
-			<ul>
-			<li><a href="#">Handgun</a></li>
-			<li><a href="#">Assault-Rifles</a></li>
-			<li><a href="#">Vehicles</a></li>
-			</ul>
-		  </li>
-		  <li class="nav-item">
+      <li class="nav-item"><a class="nav-link" href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
+      <ul>
+      <li><a href="#">Handgun</a></li>
+      <li><a href="#">Assault-Rifles</a></li>
+      <li><a href="#">Vehicles</a></li>
+      </ul>
+      </li>
+      <li class="nav-item">
             <a class="nav-link" href="https://docs.google.com/document/d/1TK8q4ms-1vJYNs1eeJy1oyIdHc2MAQlF6egn0nYxB6A/edit" target="_blank">Documentation</a>
           </li>
-		  <li class="nav-item">
+      <li class="nav-item">
             <a class="nav-link" href="defence.html">Defence Exams</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-		  <li class="nav-item">
+      <li class="nav-item">
             <a class="nav-link" href="login.html">Login/SignUp</a>
           </li>
         </ul>
@@ -143,7 +143,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -166,7 +166,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -189,7 +189,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -212,7 +212,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -235,7 +235,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -258,7 +258,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -281,7 +281,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -304,7 +304,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -327,7 +327,7 @@
             </div>
         </div>
     </div>
-	<div class="col-md-3">
+  <div class="col-md-3">
         <div class="ibox">
             <div class="ibox-content product-box">
 
@@ -355,4 +355,4 @@
 </header>
 
 </body>
-</html>                                		                            
+</html>                                                               
