--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <nav>
 <img class="logo" src="img/img2.jpg">
 <ul>
-<li><a href="index2.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
 <ul>
 <li><a href="#">Handgun</a></li>
@@ -68,7 +68,7 @@ function closeForm() {
   <meta name="author" content="">
 
   <title>IIITDefense</title>
-	
+    
 <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 <link rel="stylesheet" type="text/css" href="style2.css">
   <!-- Bootstrap core CSS -->
@@ -89,7 +89,7 @@ function closeForm() {
   
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="index2.html">IIITDefense</a>
+      <a class="navbar-brand" href="index.html">IIITDefense</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -97,28 +97,28 @@ function closeForm() {
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index2.html">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about.html">About Us</a>
           </li>
-		  <li class="nav-item"><a class="nav-link" href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
-			<ul>
-			<li><a href="#">Handgun</a></li>
-			<li><a href="#">Assault-Rifles</a></li>
-			<li><a href="#">Vehicles</a></li>
-			</ul>
-		  </li>
-		  <li class="nav-item">
+          <li class="nav-item"><a class="nav-link" href="weapons.html">Weapons <i class="fas fa-caret-down"></i> </a>
+            <ul>
+            <li><a href="#">Handgun</a></li>
+            <li><a href="#">Assault-Rifles</a></li>
+            <li><a href="#">Vehicles</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="https://docs.google.com/document/d/1TK8q4ms-1vJYNs1eeJy1oyIdHc2MAQlF6egn0nYxB6A/edit" target="_blank">Documentation</a>
           </li>
-		  <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="defence.html">Defence Exams</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
-		  <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="login.html">Login/SignUp</a>
           </li>
         </ul>
@@ -199,7 +199,7 @@ function closeForm() {
         </div>
       </div>
     </div>
-	<div class="chat-popup" id="myForm">
+    <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
     <h1>Chat</h1>
 
@@ -207,7 +207,7 @@ function closeForm() {
     <textarea placeholder="Type message.." name="msg" required></textarea>
 
     <button type="submit" class="btn send"><a class="nav-link" href="defence.html">Send</button>
-    <button type="button" class="btn cancel" onclick="closeForm()"><a class="nav-link" href="index2.html">Close</button>
+    <button type="button" class="btn cancel" onclick="closeForm()"><a class="nav-link" href="index.html">Close</button>
   </form>
 </div>
  
@@ -219,7 +219,7 @@ function closeForm() {
 
   <!-- Custom scripts for this template -->
   <script src="js1/clean-blog.min.js"></script>
-	<script>
+    <script>
   function openForm() {
   document.getElementById("myForm").style.display = "block";
 }
